# CurvedABP

./: .gitignore  README.md
cpp/: CMakeLists.txt
cpp/include/: dynamics.h  h5sim.h  h5write.h  manifold.h  state.h  vec.h  vec2.h
cpp/src/: core.cpp  dynamics.cpp  h5sim.cpp  manifold.cpp  state.cpp  vec.cpp  vec2.cpp
data/: 2026-04-07_10-43-32_particles.h5  2026-04-07_13-08-05_particles.h5  2026-04-07_13-41-50_particles.h5  2026-04-08_17-24-06_particles.h5  2026-04-08_17-36-39_particles.h5  particles.h5
presentation/: JT_SrSem_Final.aux  JT_SrSem_Final.nav  JT_SrSem_Final.tex  JT_SrSem_Final.toc
python/: abp_core.cp312-win_amd64.pyd  abp_core.pyi  analysis.ipynb  animate.py
scripts/: build_abp_core.bat  exp.sh
